[package]
name = "ascii-alphabetic-char"
version = "0.1.0"
edition = "2021"
description = "ASCII alphabetic character"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryuma017/ascii-alphabetic-char"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
