[package]
name = "ascii-alphabetic-char"
version = "0.1.1"
edition = "2021"
description = "Traits for ASCII alphabetic characters."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryuma017/ascii-alphabetic-char"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
